@@ -126,6 +126,8 @@ contains
 
     type(eos_t) :: eos_state
 
+    logical :: source_nonzero(QVAR)
+
     qp_lo = lo - dg
     qp_hi = hi + 2*dg
 
@@ -208,6 +210,15 @@ contains
 
     else
 
+       do n = 1, QVAR
+          if (minval(srcQ(lo(1)-2:hi(1)+2,n)) == ZERO .and. &
+              maxval(srcQ(lo(1)-2:hi(1)+2,n)) == ZERO) then
+             source_nonzero(n) = .false.
+          else
+             source_nonzero(n) = .true.
+          endif
+       enddo
+
        ! Compute Ip and Im -- this does the parabolic reconstruction,
        ! limiting, and returns the integral of each profile under each
        ! wave to each interface
@@ -274,17 +285,22 @@ contains
        endif
 
        do n = 1, QVAR
-          call ppm_reconstruct(srcQ, src_lo, src_hi, QVAR, n, &
-                               flatn, q_lo, q_hi, &
-                               sxm, sxp, q_lo, q_hi, &
-                               lo(1), 0, hi(1), 0, dx, 0, 0)
+          if (source_nonzero(n)) then
+             call ppm_reconstruct(srcQ, src_lo, src_hi, QVAR, n, &
+                                  flatn, q_lo, q_hi, &
+                                  sxm, sxp, q_lo, q_hi, &
+                                  lo(1), 0, hi(1), 0, dx, 0, 0)
 
-          call ppm_int_profile(srcQ, src_lo, src_hi, QVAR, n, &
-                               q, q_lo, q_hi, &
-                               qaux, qa_lo, qa_hi, &
-                               sxm, sxp, q_lo, q_hi, &
-                               Ip_src, Im_src, I_lo, I_hi, QVAR, n, &
-                               lo(1), 0, hi(1), 0, dx, dt, 0, 0)
+             call ppm_int_profile(srcQ, src_lo, src_hi, QVAR, n, &
+                                  q, q_lo, q_hi, &
+                                  qaux, qa_lo, qa_hi, &
+                                  sxm, sxp, q_lo, q_hi, &
+                                  Ip_src, Im_src, I_lo, I_hi, QVAR, n, &
+                                  lo(1), 0, hi(1), 0, dx, dt, 0, 0)
+          else
+             Ip_src(I_lo(1):I_hi(1),:,n) = ZERO
+             Im_src(I_lo(1):I_hi(1),:,n) = ZERO
+          endif
        enddo
 
        deallocate(sxm, sxp)
